# scanpy-mcp

./: README.md  pyproject.toml
src/scanpy_mcp/: __main__.py  cli.py  logging_config.py  util.py
src/scanpy_mcp/schema/: io.py  pl.py  pp.py  tl.py  util.py
src/scanpy_mcp/server/: __init__.py  io.py  pl.py  pp.py  tl.py  util.py
tests/: test_io.py  test_pp.py
